--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "querystring": "^0.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "spotify-web-api-node": "^5.0.2"
   },
@@ -29,6 +30,7 @@
     "@types/dotenv-safe": "^8.1.1",
     "@types/node": "^14.14.27",
     "@types/query-string": "^6.3.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/spotify-api": "^0.0.7",
     "@types/spotify-web-api-js": "^0.21.0",
